# raven-harness

./: .gitignore  AGENTS.md  Cargo.toml  README.md  glm.md  instructions.md  judge.md  opus.md  qwen.md
assets/: raven.txt  splash_layout.mmd  splash_tips.txt
docs/: agent-calibration.md  agent-operating-modes.md  context-ideas.md  git-github-tooling.md  grep-tool-ideas.md  grok-build-import-candidates.md  headroom-ideas.md  install.html  llm-wiki.md  nudge-judge.md  plan-mode-improvements.md  privacy-redaction-modes.md  project-secrets-ideas.md  superjudge.md  testing-ideas.md
evals/: easy_bench.json  patch_calib_endpoints.example.env  patch_calib_helpers.py  raven-eval  run_ci.sh  run_mock_smoke.sh  run_patch_calib.sh  run_replay.sh  run_smoke.sh
examples/: brave_search_probe.rs  raven_visuals.rs
scripts/: generate_raven.sh  install.ps1  install.sh
src/: agent.rs  agent_driver.rs  agent_system_prompt.rs  app_state.rs  chat_backend.rs  code_highlight.rs  config.rs  confirmation_dialog.rs  conversation_display.rs  conversation_pane.rs  desktop.rs  eval_metrics.rs  eval_scenarios.rs  eval_smoke.rs  event_loop.rs  input_dispatch.rs  input_handler.rs  judge.rs  key_edit.rs  keystore.rs  lib.rs  list_pane.rs  live_activity.rs  llm.rs  main.rs  markdown_pane.rs  md_render.rs  mouse_handler.rs  mouse_regions.rs  palette.rs  picker_handlers.rs  plan_execution.rs  plan_flow.rs  plan_intent.rs  plan_loop.rs  plan_md.rs  plan_pane_render.rs  plan_prompts.rs  plan_protocol.rs  plan_recipes.rs  (+23 more)
tests/: agent_smoke.rs
wiki/: autoharness.md  index.md  test.md  veriguard.md
(+61 files in other folders)
