[package]
name = "raven-tui"
version = "0.1.11"
edition = "2021"
description = "Simple Rust TUI for agentic coding with local llama.cpp (Qwen) + tools"
license = "MIT"
default-run = "raven-tui"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0"
regex = "1.11"
walkdir = "2.5"
ignore = "0.4"
scraper = "0.22"
url = "2.5"
html-escape = "0.2"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
futures-util = "0.3"
urlencoding = "2.1"
async-trait = "0.1"
bytes = "1"
arboard = { version = "3.4", optional = true }  # clipboard support (glm.md)
rusqlite = { version = "0.31", features = ["bundled"] }
ratatui-image = "0.9"
image = { version = "0.24", default-features = false, features = ["bmp"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
rpassword = "7"
mermaid-text = "0.56.0"
syntect = "5"

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]

[lib]
name = "raven_tui"
path = "src/lib.rs"

[[bin]]
name = "raven-tui"
path = "src/main.rs"

[[bin]]
name = "raven-eval"
path = "src/bin/raven-eval.rs"
